# genesys-mcp

./: .env.example  .gitignore  LICENSE  README.md  RELEASE-NOTES.md  pyproject.toml
scripts/: README.md  provision_users.py
skills/: README.md
skills/cc-monthly-report/: SKILL.md  build_report.py
src/genesys_mcp/: __init__.py  client.py  naming.py  server.py
src/genesys_mcp/tools/: __init__.py  analytics.py  conversations.py  directory.py  external_contacts.py  presence.py  raw.py  reports.py  speech_analytics.py  wfm.py
